test/syc/bad/signedvalist.c
/*
 * Both signed and __va_list specifier
 */

signed __va_list *a;
